# bird

./: .dockerignore  .gitignore  .gitlab-ci.yml  Doc  Dockerfile  Dockerfile-all  Dockerfile-ppc64le  Dockerfile-s390x  Dockerfile.build  Dockerfile.v4  Dockerfile.v6  INSTALL  Makefile  Makefile.calico  NEWS  README  README.md  RELEASING.md  Rules  TODO  aclocal.m4  bird.conf  build.sh  build_and_run.sh  circle.yml  configure.ac  configure.in  create_binaries.sh  run.sh  run6.sh  start.sh
.github/: ISSUE_TEMPLATE.md
.semaphore/: semaphore.yml
birdy/: Dockerfile
build_routereflector/: Dockerfile  Dockerfile-ppc64le  Makefile  README.md
build_routereflector/image/: cleanup.sh  install.sh
build_routereflector/kubernetes/: routereflector.yaml
build_routereflector/node_filesystem/: README.md
build_routereflector/node_filesystem/conf.d/: bird.toml  bird6.toml
build_routereflector/node_filesystem/etc/: rc.local
build_routereflector/node_filesystem/etc/service/confd/: run
build_routereflector/node_filesystem/templates/: bird.cfg.template  bird6.cfg.template
builder-images/: Dockerfile-cross
client/: Doc  Makefile  birdc.c  birdcl.c  client.c  client.h  client_common.c  cmds.m4  commands.c  util.c
client/birdc/: Makefile  client.c
client/birdcl/: Makefile  client.c
conf/: Doc  Makefile  cf-lex.l  conf.c  conf.h  confbase.Y  gen_commands.m4  gen_keywords.m4  gen_parser.m4
debian/: NEWS  bird.xml  calico-bird-doc.docs  calico-bird.bird.init  calico-bird.bird.service  calico-bird.bird.upstart  calico-bird.bird6.init  calico-bird.bird6.service  calico-bird.bird6.upstart  calico-bird.dirs  calico-bird.install  calico-bird.lintian-overrides  calico-bird.manpages  calico-bird.postinst  calico-bird.postrm  changelog  control  copyright  gbp.conf  prepare-environment  rules  watch
debian/bird.conf.md5sum.d/: jessie
debian/bird6.conf.md5sum.d/: 1.5.0-1  jessie
debian/patches/: 0001-Generate-docs-with-modern-linuxdoc.patch  0002-Link-using-ld.patch  0003-Split-example-config-files.patch  0004-Use-onsgmls-from-opensp-tools.patch  series
dind-image/: Dockerfile  Dockerfile.amd64
doc/: LinuxDocTools.pm  Makefile  bird-6.html  bird.conf.example  bird.html  bird.sgml  kernel-doc  mkdocs  printme  prog-foot.sgml  prog-head.sgml  prog-intro.sgml  prog-proto.sgml  reply_codes  sgml2html  sgml2latex  sgml2txt
doc/sbase/dtd/: birddoc.dtd  linuxdoc.dtd
doc/slides/: Makefile  logo.eps  obr1.eps  obr2.eps  obr5.eps  slides.tex
doc/tex/: birddoc.sty
docker-image/: Dockerfile  Dockerfile.amd64
docker-image/test-config/: bfd.conf  bird_ipam.cfg  invalid.conf
filter/: Doc  Makefile  config.Y  f-util.c  filter.c  filter.h  test.conf  test.conf2  tree.c  trie.c
lib/: Doc  Makefile  Modules  alloca.h  birdlib.h  bitops.c  bitops.h  checksum.c  event.c  event.h  hash.h  heap.h  ip.c  ip.h  ipv4.c  ipv4.h  ipv6.c  ipv6.h  lists.c  lists.h  mac.h  md5.c  md5.h  mempool.c  patmatch.c  printf.c  resource.c  resource.h  resource.sgml  sha1.c  sha1.h  sha256.c  sha256.h  sha512.c  sha512.h  slab.c  socket.h  string.h  timer.h  unaligned.h  (+1 more)
misc/: Makefile  bird.init  bird.spec  cisco2list  ips.c  stats
misc/docker/centos-6-amd64/: Dockerfile
misc/docker/centos-7-amd64/: Dockerfile
misc/docker/debian-7-amd64/: Dockerfile
misc/docker/debian-7-i386/: Dockerfile
misc/docker/debian-8-amd64/: Dockerfile
misc/docker/debian-8-i386/: Dockerfile
misc/docker/debian-9-amd64/: Dockerfile
misc/docker/debian-9-i386/: Dockerfile
misc/docker/debian-testing-amd64/: Dockerfile
misc/docker/debian-testing-i386/: Dockerfile
misc/docker/fedora-25-amd64/: Dockerfile
misc/docker/fedora-26-amd64/: Dockerfile
misc/docker/opensuse-42.3-amd64/: Dockerfile
misc/docker/ubuntu-14.04-amd64/: Dockerfile
misc/docker/ubuntu-16.04-amd64/: Dockerfile
nest/: Doc  Makefile  a-path.c  a-set.c  attrs.h  bfd.h  bird.h  cli.c  cli.h  cmds.c  config.Y  confile.h  iface.c  iface.h  ipv4.h  ipv6.h  locks.c  locks.h  main.c  mrtdump.h  neighbor.c  password.c  password.h  proto-hooks.c  proto.c  proto.sgml  protocol.h  route.h  rt-attr.c  rt-dev.c  rt-dev.h  rt-fib.c  rt-roa.c  rt-table.c
proto/: Doc
proto/babel/: Doc  babel.c  babel.h  config.Y  packets.c
proto/bfd/: Makefile  bfd.c  bfd.h  config.Y  io.c  io.h  packets.c
proto/bgp/: Doc  Makefile  attrs.c  bgp.c  bgp.h  config.Y  packets.c
proto/mrt/: mrt.c
proto/ospf/: Doc  Makefile  config.Y  dbdes.c  dbdes.h  hello.c  hello.h  iface.c  iface.h  lsack.c  lsack.h  lsalib.c  lsalib.h  lsreq.c  lsreq.h  lsupd.c  lsupd.h  neighbor.c  neighbor.h  ospf.c  ospf.h  packet.c  packet.h  rt.c  rt.h  topology.c  topology.h
proto/pipe/: Doc  config.Y  pipe.c  pipe.h
proto/radv/: config.Y  packets.c  radv.c  radv.h
proto/rip/: Doc  Makefile  auth.c  config.Y  packets.c  rip.c  rip.h
proto/static/: Doc  Makefile  config.Y  static.c  static.h
sysdep/: Doc  autoconf.h.in  config.h  sysdep.sgml
sysdep/bsd/: krt-iface.h  krt-scan.h  krt-sock.c  krt-sock.h  krt-sys.h  sysio.h
sysdep/cf/: README  bsd-v6.h  bsd.h  linux-20.h  linux-21.h  linux-22.h  linux-v6.h
sysdep/linux/: Makefile  Modules  krt-scan.Y  krt-scan.c  krt-scan.h  krt-sys.h  netlink.Y  netlink.c  sysio.h  syspriv.h
sysdep/linux/netlink/: Modules  krt-iface.h  krt-scan.h  krt-set.h  krt.Y  krt.c  krt.h  netlink.Y  netlink.c
sysdep/unix/: Doc  Makefile  Modules  client-main.c  config.Y  io.c  krt-iface.Y  krt-iface.c  krt-iface.h  krt-set.Y  krt-set.c  krt-set.h  krt.Y  krt.c  krt.h  log.c  main.c  sync-if.c  sync-rt.c  timer.h  unix.h
tools/: Makefile-top.in  Makefile.in  Rules.in  config.guess  gendist  mergedirs  progdoc
